EXTRA_DIST = codeset.m4 gettext.m4 iconv.m4 lcmessage.m4 lib-ld.m4	\
             lib-link.m4 lib-prefix.m4 progtest.m4

EXTRA_DIST += ldap.m4 libusb.m4 readline.m4 pkg.m4

EXTRA_DIST += gpg-error.m4 libgcrypt.m4 libassuan.m4 ksba.m4 ntbtls.m4

EXTRA_DIST += autobuild.m4

EXTRA_DIST += socklen.m4

EXTRA_DIST += ChangeLog-2011
